--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ashu.flutter_samples">
+    package="com.medsmart.newapp">
    <application
         android:label="flutter_samples"
         android:name="${applicationName}"
