--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_svg: ^2.0.9
   line_icons: ^2.0.3
   font_awesome_flutter: ^10.7.0
+  change_app_package_name: ^1.1.0
 
 dev_dependencies:
   flutter_test:
