--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   line_icons: ^2.0.3
   font_awesome_flutter: ^10.7.0
   change_app_package_name: ^1.1.0
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
