--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,14 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   shared_preferences: ^2.2.2
   firebase_core: ^2.24.2
+  
   firebase_auth: ^4.16.0
   flutter_svg: ^2.0.9
   line_icons: ^2.0.3
   font_awesome_flutter: ^10.7.0
   change_app_package_name: ^1.1.0
   get: ^4.6.6
+  cloud_firestore: ^4.14.0
 
 dev_dependencies:
   flutter_test:
