--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   cloud_firestore: ^4.14.0
   velocity_x: 
   anim_search_bar:
+  table_calendar: ^3.0.9
+  lottie: ^2.7.0
+  # google_fonts: ^4.0.4
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +78,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/
     - assets/samples/animations/
     - assets/samples/ui/rive_app/
     - assets/samples/ui/rive_app/rive/
