--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   lottie: ^2.7.0
   flutter_zoom_drawer: ^3.2.0
   # google_fonts: ^4.0.4
+  zego_uikit_prebuilt_call: ^4.5.1
 
 dev_dependencies:
   flutter_test:
