--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,6 +95,7 @@ dependencies:
   flutter_map: ^6.1.0
   latlng: ^2.0.7
   qr_flutter:
+  razorpay_flutter: ^1.3.0
 
 dependency_overrides: 
   intl: ^0.18.1
