--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,7 @@ dependencies:
   flutter_file_dialog: ^3.0.2
   flutter_map: ^6.1.0
   latlng: ^2.0.7
+  url_launcher: ^6.1.5
   qr_flutter:
 
 dependency_overrides: 
